--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,10 @@ dependencies:
   get: ^4.6.3
   flutter_markdown: ^0.6.10
   dio: ^4.0.6
+  flutter_dotenv: ^5.0.2
+  dartz: ^0.10.1
+  mocktail: ^0.3.0
+  string_validator: ^0.3.0
 
 dev_dependencies:
   flutter_test:
@@ -31,6 +35,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
